# is-user-codeowner-action

./: Dockerfile  README.md  action.yml
.github/workflows/: cd.yml
app/: pyproject.toml  test.py
app/is_user_codeowner_action/: app.py
